# cypher

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: README.md  pyproject.toml
backend/app/: main.py  schemas.py
backend/app/api/: routes.py
backend/app/core/: __init__.py  config.py
backend/app/services/: graph_normalizer.py  llm_service.py  neo4j_service.py  orchestrator.py  query_guard.py  schema_service.py
backend/tests/: test_api.py  test_config.py  test_graph_normalizer.py  test_orchestrator.py  test_query_guard.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  state.js  state.test.js  styles.css
frontend/src/components/: ChatPanel.jsx  ChatPanel.test.jsx  DetailPanel.jsx  GraphView.jsx  QueryTracePanel.jsx
frontend/src/lib/: api.js
neo4j/seed/: wafer_graph.cypher
scripts/: setup_neo4j.sh
