[project]
name = "graph-chat-backend"
version = "0.1.0"
description = "FastAPI backend for Neo4j graph chat orchestration"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn>=0.30.0,<1.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "neo4j>=5.24.0,<6.0.0",
  "openai>=1.47.0,<2.0.0",
  "anyio>=4.4.0,<5.0.0",
]

[dependency-groups]
dev = [
  "httpx>=0.27.0,<1.0.0",
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
  "ruff>=0.6.0,<1.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
